feat: Users 엔터티 구성